fix overflow of style name

--- a/src/common/layers/style/layers.less
+++ b/src/common/layers/style/layers.less
@@ -42,6 +42,7 @@
 
 #style-label {
   padding-top: 10px;
+  width: 100%;
 }
 #styleRow {
   margin-left: 0px;
